# dian-scraper-test

./: .dockerignore  .gitignore  Dockerfile  INTEGRATION.md  M2M.md  README.md  backend.py  core.py  db.py  docker-compose.yml  pyproject.toml  r2.py  requirements.txt  scraper.py  server.py  setup.sh
.github/workflows/: docker.yml
db/: bootstrap.sql
static/: index.html
