[project]
name = "dian-scraper-test"
version = "0.1.0"
description = "Standalone mini scraper to test human-like patterns against DIAN portal"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.48.0",
    "rich>=13.7.0",
    "click>=8.1.0",
]

[tool.setuptools]
# Explicitly disable package discovery — this is a script project, not a library
py-modules = []

[tool.uv]
package = false
